# LaughLM

./: README.md  log.txt  pyproject.toml
LaughLM/config/: loader.py  schema.py  validation.py
LaughLM/data/: domain_sampler.py  memmap_loader.py  shard_writer.py  tokenizer.py  tokenizer_train.py  train_tokenizer.py
LaughLM/model/: gpt.py  parameter_utils.py  transformer_block.py
LaughLM/model/layers/: attention.py  mlp.py  normalization.py  positional.py  residual.py  transformer_block.py
LaughLM/training/: checkpoint.py  logger.py  loss.py  optimizer.py  scheduler.py  train_state.py  train_step.py  trainer.py
LaughLM/utils/: dtype.py  prefetch.py  profiler.py  rng.py
checkpoints/: config.json
config/: loader.py  resolver.py  schema.py
configs/: gpu_test.yaml  test.yaml
configs/data/: dataset.yaml  tokenizer.yaml
configs/model/: architecture.yaml  base.yaml
scripts/: benchmark_train_step.py  build_shard.py  train_gpu_test.py  train_tokenizer.py
utils/: reproducibility.py
